--- a/content/blog/20231202T160240--aaiaaae-acronyms-and-initialisms-and-abbreviations-are-evil__blog_programming_prose_writing.org
+++ b/content/blog/20231202T160240--aaiaaae-acronyms-and-initialisms-and-abbreviations-are-evil__blog_programming_prose_writing.org
@@ -1,5 +1,6 @@
 #+title:      AaIaAaE (Acronyms and Initialisms and Abbreviations are Evil)
 #+date:       [2023-12-02 Sat 16:02]
+#+favicon: 🔤
 #+filetags:   :blog:programming:prose:writing:
 #+identifier: 20231202T160240
 #+author: Lucian Axel Knock
