--- a/content/stories/20220917T154043--brains-making-brains-making__artificialIntelligence_complete_prose_scifi.org
+++ b/content/stories/20220917T154043--brains-making-brains-making__artificialIntelligence_complete_prose_scifi.org
@@ -1,4 +1,5 @@
 #+title:      BRAINS MAKING BRAINS MAKING
+#+slug: brains-making-brains-making
 #+filetags:   :artificialIntelligence:complete:prose:scifi:
 #+author: Lucian Axel Knock
 #+favicon: 🧠
