Remove erroneous footnote

--- a/content/blog/20231202T160240--aaiaaae-acronyms-and-initialisms-and-abbreviations-are-evil__blog_programming_prose_writing.org
+++ b/content/blog/20231202T160240--aaiaaae-acronyms-and-initialisms-and-abbreviations-are-evil__blog_programming_prose_writing.org
@@ -26,7 +26,7 @@ When cells screw up and cause cancer, it is because they have miscommunicated th
 
 So what I'm getting at is this: clear communication of encoded information is *good* and unclear/mis-coded information is *bad*. Clear *good*.  Unclear *bad*. This is an analogous situation in which the difference between precise and imprecise communication is the physical distinction between life and death. Sure, it only happens ever (1 gorillian and 1)² times, but it happens. It can be easily avoided by being /clear/ in our communication.
 
-I suppose, as always, I am getting too philisophical. I simply beseech you, dear reader, use[fn:3] communication to its fullest when you don't absolutely have to keep what you're saying short. And when you do absolutely have to keep it short:
+I suppose, as always, I am getting too philisophical. I simply beseech you, dear reader, use communication to its fullest when you don't absolutely have to keep what you're saying short. And when you do absolutely have to keep it short:
 
 tl;dr IhMisCom, JWiO & KiS[fn:2]
 
