Fix title (uppercase)

--- a/content/stories/20240208T211142--a-true-account-of-the-future__artificialintelligence_complete_scifi_scrap_story.org
+++ b/content/stories/20240208T211142--a-true-account-of-the-future__artificialintelligence_complete_scifi_scrap_story.org
@@ -1,4 +1,4 @@
-#+title:      A True Account of the Future
+#+title:      A TRUE ACCOUNT OF THE FUTURE
 #+date:       [2024-02-08 Thu 21:11]
 #+filetags:   :artificialintelligence:complete:scifi:scrap:story:
 #+identifier: 20240208T211142
