Italicize foreign language

--- a/content/blog/20231202T160240--aaiaaae-acronyms-and-initialisms-and-abbreviations-are-evil__blog_programming_prose_writing.org
+++ b/content/blog/20231202T160240--aaiaaae-acronyms-and-initialisms-and-abbreviations-are-evil__blog_programming_prose_writing.org
@@ -9,7 +9,7 @@
 ** I HHH acronyms and initialisms.
 What does HHH stand for? Hate, hate, hate. I hate them, and I always have hated them. Unfortunately they are becoming more and more pervasive in our language. I am sorry for this fact, since it indicates the degeneration of our society's mortal soul.
 
-You might scoff, but I propose that the normalization of acronyms and initialisms[fn:1] is /sinful/. Not one of the 7, but in the Top Ten at least. Why? Because it forms a fundamental abstraction of all evil in this world: miscommunication.  There is of course "willful" miscommunication (lying), but effectively the distinction between the two deals with subjective moral principles, id est humans instead of information. So not one of the seven, but honestly they probably started with like 14 and had to cut a few for brevity, and it was between acronyms and murder.
+You might scoff, but I propose that the normalization of acronyms and initialisms[fn:1] is /sinful/. Not one of the 7, but in the Top Ten at least. Why? Because it forms a fundamental abstraction of all evil in this world: miscommunication.  There is of course "willful" miscommunication (lying), but effectively the distinction between the two deals with subjective moral principles, /id est/ humans instead of information. So not one of the seven, but honestly they probably started with like 14 and had to cut a few for brevity, and it was between acronyms and murder.
 
 ** Miscommunication as an abstraction of evil? WTF!?
 Every single day the cells in your body divide themselves about a zafillian times (this is an estimate), and the vast majority of those divisions go off without a hitch. Pop some champagne, you're gonna live another day. But unfortunately, every 1 gambillian and 1 times, the cells screw up. They add 7 when they should have subtracted 5. Oops.
