--- a/content/blog/20231202T160240--aaiaaae-acronyms-and-initialisms-and-abbreviations-are-evil__blog_programming_prose_writing.org
+++ b/content/blog/20231202T160240--aaiaaae-acronyms-and-initialisms-and-abbreviations-are-evil__blog_programming_prose_writing.org
@@ -32,6 +32,10 @@ I suppose, as always, I am getting too philisophical. I simply beseech you, dear
 
 tl;dr IhMisCom, JWiO & KiS[fn:3]
 
+If you think I am wrong/idiotic/too pedantic to live, let me know on 𝕏:
+
+{{< twitter user="LucianKnock" id="1763620693936058380" >}}
+
 [fn:1] The different kinds of shortenings:
 - Acronyms: you pronounce it like a word, like NASA, FEMA, LASER
 - Initialisms: you say each letter like CIA, NSA, EU
