Fix org mode frontmatter syntax for list of tags

--- a/content/blog/20231202T160240--aaiaaae-acronyms-and-initialisms-and-abbreviations-are-evil__blog_programming_prose_writing.org
+++ b/content/blog/20231202T160240--aaiaaae-acronyms-and-initialisms-and-abbreviations-are-evil__blog_programming_prose_writing.org
@@ -3,7 +3,7 @@
 #+date:       [2023-12-02 Sat 16:02]
 #+favicon: 🔤
 #+filetags:   :blog:programming:prose:writing:
-#+tags:    prose writing 
+#+tags[]:    prose writing 
 #+identifier: 20231202T160240
 #+author: Lucian Axel Knock
 #+images[]: images/abc.png
